# Umboni

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  README.md  eslint.config.js  mkdocs.yml  package-lock.json  package.json  prettier.config.mjs  pyproject.toml  tsconfig.build.json  tsconfig.json  vitest.config.ts
.github/: CODEOWNERS  SECURITY.md  dependabot.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation_request.yml  feature_request.yml
.github/workflows/: backend-quality.yml  ci.yml  codeql.yml  dependency-review.yml  documentation.yml  frontend-quality.yml  pages.yml  release-drafter.yml  repository-hygiene.yml  scorecards.yml  secret-scan.yml  stale.yml
cmake/: FortranCompilerConfiguration.cmake
docs/: architecture-overview.md  build-run-test.md  data-flow.md  external-libraries.md  getting-started.md  index.md  logging-and-observability.md  prerequisites.md  testing-strategy.md  troubleshooting.md
docs/tutorials/: adding-a-provider.md  beginner-walkthrough.md
fortran/: CMakeLists.txt
fortran/source/: command_line_argument_parser.f90  forecast_consensus_engine.f90  json_forecast_writer.f90  main.f90  normalized_weather_csv_reader.f90  provider_weight_catalog.f90  string_utilities.f90  structured_logging.f90  time_formatting_utilities.f90  weather_data_types.f90
fortran/tests/: test_forecast_consensus_engine.f90  test_json_forecast_writer.f90  test_normalized_weather_csv_reader.f90  test_support.f90
frontend/: angular.json  eslint.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.eslint.json  tsconfig.json  tsconfig.spec.json  vitest.config.ts
frontend/end-to-end/: homepage.spec.ts
frontend/public/data/: new-england-forecast-sample.json
frontend/source/: index.html  main.ts  styles.css  test-setup.ts
frontend/source/app/: app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
frontend/source/app/components/: regional-forecast-dashboard.component.spec.ts  regional-forecast-dashboard.component.ts  temperature-trend.component.spec.ts  temperature-trend.component.ts
frontend/source/app/models/: regional-forecast.ts
frontend/source/app/services/: forecast-data.service.spec.ts  forecast-data.service.ts
frontend/source/app/testing/: sample-forecast.fixture.ts
observability/: docker-compose.yml  loki-config.yml  promtail-config.yml
python/new_england_weather_data_fetcher/: __init__.py  beginner_workflow.py  comma_separated_values_output.py  command_line_interface.py  provider_clients.py  regional_location_catalog.py  structured_logging.py  weather_data_models.py
python/tests/: __init__.py  test_beginner_workflow.py  test_comma_separated_values_output.py  test_command_line_interface.py  test_provider_clients.py  test_regional_location_catalog.py  test_structured_logging.py
samples/: normalized-provider-observations.csv
samples/provider-fixtures/: met-norway-response.json  national-weather-service-hourly-response.json  national-weather-service-points-response.json  open-meteo-response.json  seven-timer-response.json
scripts/: copy_doxygen_output_into_mkdocs.py  run_weather_fetcher.py  synchronize_generated_forecast_to_frontend.py  umboni.py
src/: index.ts
test/: index.test.ts
wiki/: README.md  docker-compose.yml
wiki/seed/: adding-a-provider.md  home.md  understanding-the-pipeline.md
